# links-in-a-chain

./: CMakeLists.txt  main.cpp
src/: link.cpp  link.hpp
tests/: link_test.cpp
